--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1>About</h1>
+<h1>About Eswar Techs</h1>
 <p>This document is meant for Android developers looking to apply their existing Android knowledge to build mobile apps with Flutter. If you understand the fundamentals of the Android framework then you can use this document as a jump start to Flutter development.</p>
 </body>
 </html>
