--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1>About Eswar Techs</h1>
-<p>We train C, C++, Java, Android, C#, Python, Salesforce, Web Technologies....</p>
+<p>We train C, C++, Java, Android, C#, Python, Salesforce, Flutter, PHP, Web Technologies....</p>
 </body>
 </html>
