--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 i<html>
 <body>
 <h1>Eswar Techs YouTube</h1>
-<p>Please Subscribe hit on bell icon You’ll implement a simple app that generates proposed names for a startup company. The user can select and unselect names, saving the best ones. The code lazily generates 10 names at a time. As the user scrolls, more names are generated. There is no limit to how far a user can scroll.</p>
+<p>Please Subscribe hit on bell icon to get the notifications. You’ll implement a simple app that generates proposed names for a startup company. The user can select and unselect names, saving the best ones. The code lazily generates 10 names at a time. As the user scrolls, more names are generated. There is no limit to how far a user can scroll.</p>
 </body>
 </html>
